Created a user api with CRUD operations and api-docs
